izbris še ne dela
