# tsoa/build/build/swagger.json
@@ -72,22 +72,6 @@
             },
             "NoteUpdateParam": {
                 "$ref": "#/components/schemas/Pick_Notes.id-or-creation-or-note_"
-            },
-            "Pick_Notes.id_": {
-                "properties": {
-                    "id": {
-                        "type": "number",
-                        "format": "double"
-                    }
-                },
-                "required": [
-                    "id"
-                ],
-                "type": "object",
-                "description": "From T, pick a set of properties whose keys are in the union K"
-            },
-            "NoteDeleteParam": {
-                "$ref": "#/components/schemas/Pick_Notes.id_"
             }
         },
         "securitySchemes": {}
@@ -219,7 +203,8 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/NoteDeleteParam"
+                                "type": "number",
+                                "format": "double"
                             }
                         }
                     }
